--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Startsida - Läxhjälpen</title>
   <link href='https//fonts.googleapis.com/css?family=Merienda+One'
   rel='stylesheet'/>
-  <link rel="stylesheet" href="css/arbeten.css"/>
+  <link rel="stylesheet" href="arbeten.css"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"><!-- 7.10.3 -->
 </head>
 <body class="startpage">
