--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <div class="hwrap">
       <a href="./"><img class="logo" alt="Startsidan" 
-        src="IMG/laxlogo.png" /></a>
+        src="laxlogo.png" /></a>
       <h1>Läxhjälpen</h1>
     </div>
     <p class="tagline">Vi hjälper dig förstå!</p>
